div class added

--- a/index.html
+++ b/index.html
@@ -80,8 +80,10 @@
         <p>&copy; 2026 The Slate & Fork. <br><span style="font-size: 0.8rem; color: #666;">Demo Site by 2SyL Neural</span></p>
     </footer>
 
+    <div id="spoonai-widget-container"></div>
+
     <script>
-    window.SPOONAI_CLIENT_ID = "demo_restaurant";
+        window.SPOONAI_CLIENT_ID = "demo_restaurant";
     </script>
     
     <script src="https://bjeong212.github.io/spoonai-widget/widget.js?v=9000"></script>
